--- a/online_ueditor/html/download.html
+++ b/online_ueditor/html/download.html
@@ -4,9 +4,9 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
 
     <title></title>
-    <script type="text/javascript" src="./lib/jquery-1.5.1.js"></script>
+    <script type="text/javascript" src="../lib/jquery-1.5.1.js"></script>
     <script type="text/javascript" src="./config.js"></script>
-    <script type="text/javascript" src="./js/helpers.js"></script>
+    <script type="text/javascript" src="../js/helpers.js"></script>
 
 </head>
 <body>
