--- a/test.html
+++ b/test.html
@@ -2,8 +2,13 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="./lib/jquery-1.5.1.js"></script>
+
 </head>
 <body>
+<p id="tab"></p>
+<button id='tabb' onClick="showData();">下一步
+</button>
 <div id='result' style="display: block"><p>nnnnnnnnnnnnnnnnnnnnnnnnnnn</p><button >ok</button> <textarea>textarea</textarea></div>
 <div id='result1' style="display: none" ><p>kkkkkkkkkkkkkkkkkkkkkkkkkkk</p><button onclick="ok1(this);">ok</button> <textarea>textarea</textarea></div>
 <button id='nextButton' onClick="nextStep(this.id);">下一步
@@ -30,6 +35,11 @@
     </tbody>
 </table></div>
 <script type="text/javascript">
+    function showData(){
+        debugger
+        var data = '{"data":"eeee"}';
+        $('#tab').append(JSON.parse(data).data);
+    }
 function ok1(ok){
     console.log( ok.parentNode.id);
 }
