--- a/online_ueditor/html/grunt.html
+++ b/online_ueditor/html/grunt.html
@@ -6,7 +6,7 @@
     <title></title>
     <script type="text/javascript" src="../lib/jquery-1.5.1.js"></script>
     <script type="text/javascript" src="./config.js"></script>
-    <script type="text/javascript" src="../js/helpers.js"></script>
+    <script type="text/javascript" src="./js/helpers.js"></script>
 </head>
 
 <body>
